hledger/test/errors/csvbalancetypeparse.csv.rules
skip 2
date %1
balance %2
balance-type badtype
